--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -3,4 +3,9 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-   
+                android:color="#004F81" />
+            <stroke
+                android:width="1dp"
+                android:color="#222222" />
+            <corners
+         
