--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -20,4 +20,9 @@
         <shape>
             <gradient
                 android:startColor="@color/colorPrimary"
-                
+                android:endColor="#89cbee"
+                android:angle="270" />
+            <stroke
+                android:width="1dp"
+                android:color="#4aa5d4" />
+         
