--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -25,4 +25,9 @@
             <stroke
                 android:width="1dp"
                 android:color="#4aa5d4" />
-         
+            <corners
+                android:radius="7dp" />
+            <padding
+                android:left="10dp"
+                android:top="10dp"
+                android:r
