--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -30,4 +30,8 @@
             <padding
                 android:left="10dp"
                 android:top="10dp"
-                android:r
+                android:right="10dp"
+                android:bottom="10dp" />
+        </shape>
+    </item>
+</selector>
