--- a/app/src/main/res/drawable/choosers_background.xml
+++ b/app/src/main/res/drawable/choosers_background.xml
@@ -1,2 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/re
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item>
+        <shape>
+            <solid
+                android:color="#ABB2BD" />
+            <stroke
+                android:width="1dp
