--- a/app/src/main/res/drawable/choosers_background.xml
+++ b/app/src/main/res/drawable/choosers_background.xml
@@ -6,4 +6,9 @@
             <solid
                 android:color="#ABB2BD" />
             <stroke
-                android:width="1dp
+                android:width="1dp"
+                android:color="#222222" />
+            <corners
+                android:radius="20dp" />
+            <padding
+                android:left="10dp"
