--- a/app/src/main/res/drawable/choosers_background.xml
+++ b/app/src/main/res/drawable/choosers_background.xml
@@ -12,3 +12,10 @@
                 android:radius="20dp" />
             <padding
                 android:left="10dp"
+                android:top="10dp"
+                android:right="10dp"
+                android:bottom="10dp" />
+        </shape>
+    </item>
+
+</selector>
