--- a/app/src/main/res/drawable/ic_drop.xml
+++ b/app/src/main/res/drawable/ic_drop.xml
@@ -1,1 +1,3 @@
-<vector a
+<vector android:height="24dp" android:tint="#FF0000"
+    android:viewportHeight="24.0" android:viewportWidth="24.0"
+    android:width="24dp" xmlns:android="http://schemas.
