--- a/app/src/main/res/drawable/ic_growth.xml
+++ b/app/src/main/res/drawable/ic_growth.xml
@@ -1,1 +1,3 @@
-<vec
+<vector android:height="24dp" android:tint="#00FF00"
+    android:viewportHeight="24.0" android:viewportWidth="24.0"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/re
