--- a/app/src/main/res/layout/fragment_coins.xml
+++ b/app/src/main/res/layout/fragment_coins.xml
@@ -3,4 +3,9 @@
     android:id="@+id/rootLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    x
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.coins.CoinsActivity">
+
+    <
