--- a/app/src/main/res/layout/fragment_coins.xml
+++ b/app/src/main/res/layout/fragment_coins.xml
@@ -8,4 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.coins.CoinsActivity">
 
-    <
+    <TextView
+        android:id="@+id/textViewList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@strin
