--- a/app/src/main/res/layout/fragment_coins.xml
+++ b/app/src/main/res/layout/fragment_coins.xml
@@ -16,4 +16,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-       
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <androi
