--- a/app/src/main/res/layout/fragment_coins.xml
+++ b/app/src/main/res/layout/fragment_coins.xml
@@ -20,4 +20,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <androi
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_
