--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -11,4 +11,9 @@
         android:id="@+id/imageViewIconDetails"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:la
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    
