--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -20,4 +20,7 @@
         android:id="@+id/textViewHighPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/imageVi
+        app:layout_constraintStart_toEndOf="@id/imageViewIconDetails"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imageViewIconDetails"
+        app:layout_constraintBottom_
