--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -36,4 +36,7 @@
 
     <TextView
         android:id="@+id/textViewHashAlg"
-        
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/imageViewIconDetails"
+        app:layout_constraintEnd_toEndO
