--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -39,4 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/imageViewIconDetails"
-        app:layout_constraintEnd_toEndO
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewLowPrice"
+        app:layout_constraintBottom_toTopOf="@id/scrollDesc" />
+
+    <com.airbnb.lottie.Lott
