--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -43,4 +43,8 @@
         app:layout_constraintTop_toBottomOf="@id/textViewLowPrice"
         app:layout_constraintBottom_toTopOf="@id/scrollDesc" />
 
-    <com.airbnb.lottie.Lott
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottieText"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toBottomOf=
