--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -47,4 +47,7 @@
         android:id="@+id/lottieText"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:layout_constraintTop_toBottomOf=
+        app:layout_constraintTop_toBottomOf="@id/imageViewIconDetails"
+        app:layout_constraintBottom_toTopOf="@id/horScroll"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_co
