--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -55,4 +55,11 @@
         android:visibility="gone"
         app:lottie_speed="2"
         app:lottie_fileName="text_anim.json"
-        app:lottie_loop="true"
+        app:lottie_loop="true" />
+
+    <ScrollView
+        android:id="@+id/scrollDesc"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingBottom="8dp"
+        andro
