--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -62,4 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingBottom="8dp"
-        andro
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEn
