--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -65,4 +65,9 @@
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEn
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageViewIconDetails"
+        app:layout_constraintBottom_toTopOf="@id/horScroll">
+
+        <TextView
+            android:id
