--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -86,4 +86,9 @@
         app:layout_constraintBottom_toTopOf="@id/lineChart">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-  
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                
