--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -94,4 +94,8 @@
                 android:id="@+id/textViewDay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding
+                android:padding="8dp"
+                android:layout_margin="8dp"
+                android:textSize="16sp"
+                android:background="@drawable/text_view_shape_empty"
+                app:la
