--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -101,4 +101,9 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:la
+                app:layout_constraintEnd_toStartOf="@id/textViewWeek"
+                android:text="@string/day" />
+
+            <TextView
+                android:id="@+id/textViewWeek"
+                a
