--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -110,4 +110,7 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:layout_margin="8dp"
-         
+                android:textSize="16sp"
+                android:background="@drawable/text_view_shape_empty"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBott
