--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -113,4 +113,7 @@
                 android:textSize="16sp"
                 android:background="@drawable/text_view_shape_empty"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBott
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/textViewDay"
+                app:layout_constraintEnd_toStartOf="@id/textViewMonth"
+                an
