--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -121,4 +121,8 @@
             <TextView
                 android:id="@+id/textViewMonth"
                 android:layout_width="wrap_content"
-                android:lay
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_margin="8dp"
+                android:textSize="16sp"
+                andro
