--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -127,4 +127,7 @@
                 android:textSize="16sp"
                 android:background="@drawable/text_view_shape_empty"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="par
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/textViewWeek"
+                app:layout_constraintEnd_toStartOf="@id/textViewYear"
+                android:text="@string
