--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -135,4 +135,8 @@
             <TextView
                 android:id="@+id/textViewYear"
                 android:layout_width="wrap_content"
-                android:layout_height="wra
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_margin="8dp"
+                android:textSize="16sp"
+                android:background="@drawable/text_view_shape_empt
