--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -139,4 +139,7 @@
                 android:padding="8dp"
                 android:layout_margin="8dp"
                 android:textSize="16sp"
-                android:background="@drawable/text_view_shape_empt
+                android:background="@drawable/text_view_shape_empty"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart
