--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -156,4 +156,9 @@
         android:layout_height="100dp"
         app:layout_constraintTop_toTopOf="@id/lineChart"
         app:layout_constraintBottom_toBottomOf="@id/lineChart"
-        app:layout_constraintStart_to
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:lottie_autoPlay="true"
+        android:visibility="gone"
+        app:lottie_speed="1"
+        app:
