--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -44,3 +44,51 @@
             app:layout_constraintTop_toBottomOf="@id/textViewName"
             app:layout_constraintBottom_toBottomOf="@id/imageViewIcon"
             app:layout_constraintStart_toEndOf="@id/imageViewIcon"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/textViewMarketCap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/market_cap"
+            app:layout_constraintTop_toBottomOf="@id/imageViewIcon"
+            app:layout_constraintBottom_toTopOf="@id/textViewMarketCapValue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/textViewMarketCapValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewMarketCap"
+            app:layout_constraintBottom_toTopOf="@id/imageViewGrowthDrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageViewGrowthDrop"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewMarketCapValue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/textViewGrowthDrop"/>
+
+        <TextView
+            android:id="@+id/textViewGrowthDrop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="@id/imageViewGrowthDrop"
+            app:layout_constraintBottom_toBottomOf="@id/imageViewGrowthDrop"
+            app:layout_constraintStart_toEndOf="@id/imageViewGrowthDrop"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
